--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Shivani's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/shivani8396/resume/blob/main/Shivani_resume%20_%20APM.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/shivani8396/resume/blob/main/Shivani_resume_APM.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
